cabal-version: 3.0
name:          plutus-poseidon
version:       1.0.0.0
license:       Apache-2.0
author:        Thomas Vellekoop
maintainer:    thomas.vellekoop@iohk.io
synopsis:      "A plutus implementation of the poseidon hash function"
build-type:    Simple

common ghc-version-support
  if (impl(ghc <9.6) || impl(ghc >=9.7))
    buildable: False

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving
    Strict

  -- See Note [-fno-full-laziness in Plutus Tx]
  ghc-options:
    -fno-specialise -fno-spec-constr -fno-strictness
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-unbox-strict-fields -fno-unbox-small-strict-fields
    -fno-full-laziness

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages -Wmissing-deriving-strategies

---------------- Common code for benchmarking ----------------

library plutus-benchmark-common
  import:          lang
  hs-source-dirs:  common
  exposed-modules:
    PlutusBenchmark.Common
    PlutusBenchmark.ProtocolParameters

  build-depends:
    , base >=4.9 && <5
    , bytestring
    , flat ^>=0.6
    , plutus-core ^>=1.30
    , plutus-ledger-api ^>=1.30
    , plutus-tx ^>=1.30

library
  exposed-modules:
    Plutus.Crypto.BlsUtils
    Plutus.Crypto.Poseidon
    Plutus.Crypto.Poseidon.Constants

  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , base >=4.9 && <5
    , plutus-core ^>=1.30
    , plutus-tx ^>=1.30

test-suite exec-main
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:
    , base >=4.9 && <5
    , plutus-core ^>=1.30
    , plutus-poseidon
    , plutus-tx ^>=1.30

test-suite bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  exposed-modules:
    RunPoseidon
    Scripts

  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:
    , base >=4.9 && <5
    , bytestring
    , hedgehog
    , plutus-benchmark-common
    , plutus-core ^>=1.30
    , plutus-poseidon
    , plutus-tx ^>=1.30
    , plutus-tx-plugin ^>=1.30
